--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </body>
 
     <script> 
-        // Client guest name and connection (i.e. socket)
-        let me = "";
+        // Client guest name, connection (i.e. socket), clientID and gameID
+        let client = "";
         let socket = null;
+        let clientID = null;
+        let gameID = null;
 
         // Client Event Handlers
         // ==============================================================
@@ -20,30 +22,43 @@
         window.addEventListener("load", () => {
             socket = new WebSocket("ws://localhost:8888");
 
-            socket.onopen =  () => {
-                console.info("[Client]: Connection established!");
+            socket.onopen =  (event) => {
+                let client = event;
+                console.log("is this a client?", event);
+                console.info("[CLIENT]: Connection established!");
             };
 
             socket.onmessage = (event) => {
                 const message = JSON.parse(event.data);
 
-                console.log(`[Client]: Message :: ${message.event} :: `, message);
+                console.log(`[CLIENT]: Message :: ${message.event} :: `, message);
                 
                 switch (message.event) {
                     //cases
+                    case "connect":
+                        clientID = message.data;
+                        console.log(`[CLIENT]: Client ID set successfully ${clientID}`);
+                        break;
+
+                    case "create":
+                        gameID = message.data.id;
+                        console.log(`[CLIENT]: Game successfully created with id ${gameID}`);
+                        break;
+
+                    
 
                     default:
-                        console.error(`[Client]: Error :: Unknown event ${message.event}`);
+                        console.error(`[CLIENT]: Error :: Unknown event ${message.event}`);
                         break;
                 }
             };
 
             socket.onclose = (event) => {
-                console.info("[Client]: Disconnected.", event);
+                console.info("[CLIENT]: Disconnected.", event);
             }
 
             socket.onerror = (error) => {
-                console.log(`[Client]: ERROR`, error);
+                console.log(`[CLIENT]: ERROR`, error);
             }
 
             // FIXME: handle the `error` event
