lagt till fonts, men funkart ej

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="./components/pickCharacterPage/pickCharacterPage.css">
     <link rel="stylesheet" href="./components/cards/cards.css">
     <link rel="stylesheet" href="./components/header/header.css">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="./components/joinPage/joinPage.css">
     <link rel="stylesheet" href="./components/landingPage/landingPage.css">
     <link rel="stylesheet" href="./components/buttons/buttons.css">
+    
     <title>GuessWHO</title>
 </head>
 <body>
