fixed gameBoard and some fixes on header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./components/game/gameBoard.css">
     <link rel="stylesheet" href="./components/characterPage/characterPage.css">
     <link rel="stylesheet" href="./components/cards/cards.css">
     <link rel="stylesheet" href="./components/header/header.css">
