flyttade index.css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./static/style/index.css">
     <link rel="stylesheet" href="./components/game/gameBoard.css">
     <link rel="stylesheet" href="./components/characterPage/characterPage.css">
     <link rel="stylesheet" href="./components/cards/cards.css">
@@ -13,10 +14,12 @@
     <link rel="stylesheet" href="./components/joinPage/joinPage.css">
     <link rel="stylesheet" href="./components/landingPage/landingPage.css">
     <link rel="stylesheet" href="./components/buttons/buttons.css">
-    
+
     <title>GuessWHO</title>
 </head>
+
 <body>
-    <script type ="module" src="./components/index.js"></script>
+    <script type="module" src="./components/index.js"></script>
 </body>
+
 </html>
