--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./static/style/index.css">
     <link rel="stylesheet" href="./components/game/gameBoard.css">
     <link rel="stylesheet" href="./components/characterPage/characterPage.css">
     <link rel="stylesheet" href="./components/cards/cards.css">
