--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./components/joinPage/joinPage.css">
     <link rel="stylesheet" href="./components/landingPage/landingPage.css">
     <link rel="stylesheet" href="./components/buttons/buttons.css">
-    <link rel="stylesheet" href="./components/popUpHowTo/popUpHowTo.css"
+    <link rel="stylesheet" href="./components/popUpHowTo/popUpHowTo.css">
+    <title>GuessWHO</title>
 </head>
 <body>
     <script type ="module" src="./components/index.js"></script>
