--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./components/buttons/buttons.css">
     <link rel="stylesheet" href="./components/popUpHowTo/popUpHowTo.css">
     <link rel="stylesheet" href="./components/popUpExit/popUpExit.css">
+    <link rel="stylesheet" href="./components/popUpQuestion/popUpQuestion.css">
     <link rel="stylesheet" href="./components/waitingRoom/waitingRoom.css">
     <title>GuessWHO</title>
 </head>
