Popupguess is done
changes in server.js, index.js and popupguess. Used mostly existing logic to render popup wether a guess is correct or not depending on who guessed. I might do some small changes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./components/popUpHowTo/popUpHowTo.css">
     <link rel="stylesheet" href="./components/popUpExit/popUpExit.css">
     <link rel="stylesheet" href="./components/popUpQuestion/popUpQuestion.css">
+    <link rel="stylesheet" href="./components/popUpGuess/popUpGuess.css">
     <link rel="stylesheet" href="./components/waitingRoom/waitingRoom.css">
     <title>GuessWHO</title>
 </head>
