--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./components/popUpQuestion/popUpQuestion.css">
     <link rel="stylesheet" href="./components/popUpGuess/popUpGuess.css">
     <link rel="stylesheet" href="./components/waitingRoom/waitingRoom.css">
+    <link rel="stylesheet" href="./components/chat/gameChat.css">
     <title>GuessWHO</title>
 </head>
 <body>
