--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./components/joinPage/joinPage.css">
     <link rel="stylesheet" href="./components/landingPage/landingPage.css">
     <link rel="stylesheet" href="./components/buttons/buttons.css">
+    <link rel="stylesheet" href="./components/popUp/popUp.css">
     <link rel="stylesheet" href="./components/popUpHowTo/popUpHowTo.css">
     <link rel="stylesheet" href="./components/popUpExit/popUpExit.css">
     <link rel="stylesheet" href="./components/popUpQuestion/popUpQuestion.css">
