--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./components/popUp/popUp.css">
     <link rel="stylesheet" href="./components/waitingRoom/waitingRoom.css">
     <link rel="stylesheet" href="./components/chat/gameChat.css">
+    <link rel="stylesheet" href="./components/alert/renderAlert.css">
     <title>GuessWHO</title>
 </head>
 <body>
